feat: make grub save last choice

--- a/etc/default/grub.d/99-black-desk-tpl14-fix.cfg
+++ b/etc/default/grub.d/99-black-desk-tpl14-fix.cfg
@@ -7,6 +7,9 @@
 # My new SSD from Yangtze Memory Technologies seems to have some issue.
 # I disable some powersave feature in kernel then it works fine.
 
+GRUB_DEFAULT=saved
+GRUB_SAVEDEFAULT=true
+
 GRUB_CMDLINE_LINUX=${GRUB_CMDLINE_LINUX}${GRUB_CMDLINE_LINUX:+ }'\
 mem_sleep_default=s2idle \
 pcie_aspm=off \
