--- a/.setup-clash-meta/clash-meta.service
+++ b/.setup-clash-meta/clash-meta.service
@@ -17,7 +17,7 @@ StateDirectory=clash-meta
 ConfigurationDirectory=clash-meta
 ConfigurationDirectoryMode=0555
 
-ExecStartPre=cp -n /usr/local/share/clash-meta/Country.mmdb ${STATE_DIRECTORY}/Country.mmdb
+ExecStartPre=-cp -n /usr/local/share/clash-meta/Country.mmdb ${STATE_DIRECTORY}/Country.mmdb
 ExecStart=clash-meta -d $STATE_DIRECTORY -f ${CONFIGURATION_DIRECTORY}/config.yaml
 
 [Install]
