--- a/etc/systemd/user/idle-on-battery.service
+++ b/etc/systemd/user/idle-on-battery.service
@@ -5,6 +5,8 @@ Description=Make this system idle only when using battery.
 Environment="BUSCTL=/opt/io.github.black-desk/systemd/build/busctl"
 Type=simple
 ExecStart=/opt/io.github.black-desk/tpl14-debian-tweak/scripts/idle-only-using-battery.sh
+Restart=always
+RestartSec=5
 
 [Install]
 WantedBy=default.target
