chore: add modeline to systemd service

--- a/.setup-clash-meta/clash-meta.service
+++ b/.setup-clash-meta/clash-meta.service
@@ -1,3 +1,5 @@
+# vim: ft=systemd
+
 [Unit]
 Description=A rule-based tunnel in Go.
 After=network.target NetworkManager.service systemd-networkd.service iwd.service
