refact: make this repository work on all machine
Use environment generator to make this repository work on all machines.

--- a/etc/systemd/system/fix-led.service
+++ b/etc/systemd/system/fix-led.service
@@ -1,5 +1,6 @@
 [Unit]
-Description=Update capslock LED on builtin keyboard to correct state.
+Description=Update capslock LED on builtin keyboard to correct state on my thinkpad L14.
+ConditionEnvironment=BLACKDESK_IS_THINKPAD_L14_GEN2
 
 [Service]
 Type=simple
