refact: rename files

--- a/etc/default/grub.d/99-blackdesk-tpl14g2-fix.cfg
+++ b/etc/default/grub.d/99-blackdesk-tpl14g2-fix.cfg
@@ -1,15 +1,19 @@
 # vim:ft=sh
 
+if [ -n "$BLACKDESK_IS_THINKPAD_L14_GEN2" ]; then
+        return
+fi
+
+# Lock my tpl14g2 kernel version to 6.1.0-10
+
+GRUB_DEFAULT="Advanced options for Debian GNU/Linux>Debian GNU/Linux, with Linux 6.1.0-10-amd64"
+
 # Thinkpad L14 Gen2 (AMD) has an issue that make laptop cannot sleep to mem.
 # https://www.reddit.com/r/thinkpad/comments/pdpg48/lenovo_thinkpad_l14_gen2_amd_linux/?rdt=36574
 # We have to make kernel default to s2idle.
 #
 # My new SSD from Yangtze Memory Technologies seems to have some issue.
 # I disable some powersave feature in kernel then it works fine.
-
-if [ -n "$BLACKDESK_IS_THINKPAD_L14_GEN2" ]; then
-        return
-fi
 
 GRUB_CMDLINE_LINUX=${GRUB_CMDLINE_LINUX}${GRUB_CMDLINE_LINUX:+ }'\
 mem_sleep_default=s2idle \
