--- a/etc/default/grub.d/99-blackdesk-tpl14g2-fix.cfg
+++ b/etc/default/grub.d/99-blackdesk-tpl14g2-fix.cfg
@@ -1,8 +1,12 @@
 # vim:ft=sh
 
-if [ -n "$BLACKDESK_IS_THINKPAD_L14_GEN2" ]; then
+. /etc/systemd/system-environment-generators/00-blackdesk
+
+if [ -z "$BLACKDESK_IS_THINKPAD_L14_GEN2" ]; then
         return
 fi
+
+echo "Fix grub configuration for my Thinkpad L14 Gen2..."
 
 # Lock my tpl14g2 kernel version to 6.1.0-10
 
@@ -19,3 +23,5 @@ GRUB_CMDLINE_LINUX=${GRUB_CMDLINE_LINUX}${GRUB_CMDLINE_LINUX:+ }'\
 mem_sleep_default=s2idle \
 pcie_aspm=off \
 nvme_core.default_ps_max_latency_us=0'
+
+echo "Done."
