refact: do not download clash-meta bin every time

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-usr/local/share/clash-meta/Country.mmdb
-usr/local/bin/clash-meta
+/usr/local/share/clash-meta/Country.mmdb
+/usr/local/bin/clash-meta
+/clash-meta-version
