--- a/etc/default/grub.d/99-io.github.black-desk.debian-tweak.cfg
+++ b/etc/default/grub.d/99-io.github.black-desk.debian-tweak.cfg
@@ -1,8 +1,8 @@
 # vim:ft=sh
 
-. /etc/systemd/system-environment-generators/00-blackdesk
+. /etc/systemd/system-environment-generators/00-io.github.black-desk.debian-tweak
 
-if [ -z "$BLACKDESK_IS_THINKPAD_L14_GEN2" ]; then
+if [ -z "$IO_GITHUB_BLACKDESK_DEBIANTWEAK_IS_THINKPAD_L14_GEN2" ]; then
         return
 fi
 
