--- a/etc/systemd/system/io.github.black-desk.debian-tweak.clash-meta.service
+++ b/etc/systemd/system/io.github.black-desk.debian-tweak.clash-meta.service
@@ -14,13 +14,13 @@ ProtectControlGroups=true
 NoNewPrivileges=true
 MemoryDenyWriteExecute=true
 
-StateDirectory=clash-meta
+StateDirectory=io.github.black-desk.debian-tweak.clash-meta
 
-ConfigurationDirectory=clash-meta
+ConfigurationDirectory=io.github.black-desk.debian-tweak.clash-meta
 ConfigurationDirectoryMode=0555
 
-ExecStartPre=-cp -n /usr/local/share/clash-meta/Country.mmdb ${STATE_DIRECTORY}/Country.mmdb
-ExecStart=clash-meta -d $STATE_DIRECTORY -f ${CONFIGURATION_DIRECTORY}/config.yaml
+ExecStartPre=-cp -n /opt/io.github.black-desk.debian-tweak/share/clash-meta/Country.mmdb ${STATE_DIRECTORY}/Country.mmdb
+ExecStart=/opt/io.github.black-desk.debian-tweak/bin/clash-meta -d $STATE_DIRECTORY -f ${CONFIGURATION_DIRECTORY}/config.yaml
 
 [Install]
 WantedBy=multi-user.target
