chore: upgrade kernel

--- a/etc/default/grub.d/99-io.github.black-desk.debian-tweak.cfg
+++ b/etc/default/grub.d/99-io.github.black-desk.debian-tweak.cfg
@@ -8,9 +8,9 @@ fi
 
 echo "Fix grub configuration for my Thinkpad L14 Gen2..."
 
-# Lock my tpl14g2 kernel version to 6.1.0-10
+# Lock my tpl14g2 kernel version to 6.6.15
 
-GRUB_DEFAULT="Advanced options for Debian GNU/Linux>Debian GNU/Linux, with Linux 6.1.0-10-amd64"
+GRUB_DEFAULT="Advanced options for Debian GNU/Linux>Debian GNU/Linux, with Linux 6.6.15-amd64"
 
 # Thinkpad L14 Gen2 (AMD) has an issue that make laptop cannot sleep to mem.
 # https://www.reddit.com/r/thinkpad/comments/pdpg48/lenovo_thinkpad_l14_gen2_amd_linux/?rdt=36574
