docs: update note of systemd logind and sleep

--- a/etc/systemd/logind.conf.d/99-io.github.black-desk.debian-tweak.conf
+++ b/etc/systemd/logind.conf.d/99-io.github.black-desk.debian-tweak.conf
@@ -1,4 +1,38 @@
 [Login]
+# NOTE:
+# `man logind.conf.5` says:
+# > If the system is inserted in a docking station,
+# > or if more than one display is connected,
+# > the action specified by HandleLidSwitchDocked= occurs;
+# > if the system is on external power
+# > the action (if any) specified by HandleLidSwitchExternalPower= occurs;
+# > otherwise the HandleLidSwitch= action occurs.
+# So basically, the HandleLidSwitch= action occurs
+# when the system is on battery.
 HandleLidSwitch=suspend-then-hibernate
+# NOTE:
+# `man logind.conf.5` says:
+# > IdleAction=
+# > Configures the action to take when the system is idle.
+# > ...
+# > Note that this requires that
+# > user sessions correctly report the idle status to the system.
+# > The system will execute the action after
+# > all sessions report that they are idle,
+# > no idle inhibitor lock is active,
+# > and subsequently,
+# > the time configured with IdleActionSec= (see below) has expired.
+# GNOME reports the user session idle after a configurable timeout,
+# which could be set by
+# `gsettings set org.gnome.desktop.session idle-delay "$TIMEOUT_IN_SECONDS"`.
+# Check https://github.com/black-desk/debian-tweak/blob/301b6eeedbfa818936367fed8ff78ef66111cb76/opt/io.github.black-desk.debian-tweak/libexec/io.github.black-desk.debian-tweak/idle-only-using-battery.sh
+# for an example that sets the GNOME idle delay to 120 seconds when on battery.
 IdleAction=suspend-then-hibernate
 IdleActionSec=10
+
+# NOTE:
+# `suspend-then-hibernate` means that the system will first suspend,
+# then hibernate after a while.
+# The time before hibernation is determined by
+# `HibernateDelaySec=` in
+# `/etc/systemd/sleep.conf` or `/etc/systemd/sleep.conf.d/*.conf`.
