--- a/etc/systemd/sleep.conf.d/99-io.github.black-desk.debian-tweak.conf
+++ b/etc/systemd/sleep.conf.d/99-io.github.black-desk.debian-tweak.conf
@@ -1,2 +1,6 @@
 [Sleep]
+# NOTE:
+# Check comments
+# in /etc/systemd/logind.conf.d/99-io.github.black-desk.debian-tweak.conf
+# for more information.
 HibernateDelaySec=600
