feat: update tlp config

--- a/etc/tlp.d/99-io.black-desk.github.debian-tweak.conf
+++ b/etc/tlp.d/99-io.black-desk.github.debian-tweak.conf
@@ -1,3 +1,17 @@
+CPU_SCALING_MIN_FREQ_ON_AC=400000
+CPU_SCALING_MAX_FREQ_ON_AC=4462000
+CPU_SCALING_MIN_FREQ_ON_BAT=400000
+CPU_SCALING_MAX_FREQ_ON_BAT=800000
+
+RADEON_DPM_PERF_LEVEL_ON_AC=auto
+RADEON_DPM_PERF_LEVEL_ON_BAT=low
+
+RADEON_DPM_STATE_ON_AC=performance
+RADEON_DPM_STATE_ON_BAT=battery
+
+RADEON_POWER_PROFILE_ON_AC=default
+RADEON_POWER_PROFILE_ON_BAT=low
+
 CPU_BOOST_ON_AC=1
 CPU_BOOST_ON_BAT=0
 
