feat(logind): ignore lid siwtch on external power

--- a/etc/systemd/logind.conf.d/99-io.github.black-desk.debian-tweak.conf
+++ b/etc/systemd/logind.conf.d/99-io.github.black-desk.debian-tweak.conf
@@ -9,6 +9,7 @@
 # > otherwise the HandleLidSwitch= action occurs.
 # So basically, the HandleLidSwitch= action occurs
 # when the system is on battery.
+HandleLidSwitchExternalPower=ignore
 HandleLidSwitch=suspend-then-hibernate
 # NOTE:
 # `man logind.conf.5` says:
